# matrixlib

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/matrix/: mod.rs  mtuple.rs  ops.rs  ops2x2.rs  rw.rs  transform.rs
src/vector/: mod.rs  ops.rs  polar.rs
