[package]
name = "matrixlib"
version = "0.1.2"
edition = "2021"
authors = ["Squirrelcoding <rosilescarlos28@gmail.com>"]
description = "A really bad toy matrix library just so i can practice some rust. Don't use this. Use Nalgebra."
license = "GPL-2.0-or-later"
repository = "https://github.com/Squirrelcoding/matrixlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"